fix issue with Java 11