@@ -144,6 +144,39 @@
                         <arguments>-Dmaven.javadoc.skip=true</arguments>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.22.2</version>
+                    <executions>
+                        <execution>
+                            <id>default-test</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>test</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <!--                        To be compatible with java 11-->
+                        <argLine>
+                            --illegal-access=permit
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.lang.module=ALL-UNNAMED
+                            --add-opens java.base/java.io=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.base=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.module=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
+                            --add-opens java.base/jdk.internal.math=ALL-UNNAMED
+                            --add-opens java.base/jdk.management.jfr=ALL-UNNAMED
+                            --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                            --add-opens jdk.management.jfr/jdk.management.jfr=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
